mirage_site/static/mirage_site/css/layouts/blog.css
/*Potential fix for forcing div scroll visibility:*/
.frame::-webkit-scrollbar {
    -webkit-appearance: none;
}

.frame::-webkit-scrollbar:vertical {
    width: 11px;
}

.frame::-webkit-scrollbar:horizontal {
    height: 11px;
}

.frame::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 2px solid white; /* should match background, can't be transparent */
    background-color: rgba(0, 0, 0, .5);
}

.frame::-webkit-scrollbar-track { 
    background-color: #fff; 
    border-radius: 8px; 
}
 
 .frame ul li {

   max-height:63px;/*The important part*/
    overflow-y:auto;/*Also...*/
    overflow-x:hidden;/*And the end of the important part*/
    }


* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
html    {
    font-family: 'Open Sans', sans-serif;
}
a {
    text-decoration: none;
    color: rgb(61, 146, 201);
}
a:hover,
a:focus {
    text-decoration: underline;
}
h3 {
    font-weight: 100;
    margin:0em;
}
/* LAYOUT CSS */
.pure-img-responsive {
    max-width: 100%;
    height: auto;
}
#layout {
    padding: 0;
}
.header {
    text-align: center;
    top: auto;
    margin: 3em auto;
}

.sidebar {
    background: rgb(61, 79, 93);
    color: #fff;
}

.brand-title,
.brand-tagline {
    margin: 0;
}
.brand-title {
    text-transform: uppercase;
}
.brand-tagline {
    font-weight: 300;
    color: rgb(176, 202, 219);
}

.nav-list {
    margin: 0;
    padding: 0;
    list-style: none;
}
.nav-item {
    display: inline-block;
    *display: inline;
    zoom: 1;
}
.nav-item a {
    background: transparent;
    border: 2px solid rgb(176, 202, 219);
    color: #fff;
    margin-top: 1em;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    font-size: 85%;
}
.nav-item a:hover,
.nav-item a:focus {
    border: 2px solid rgb(61, 146, 201);
    text-decoration: none;
}

.content-subhead {
    text-transform: uppercase;
    color: #aaa;
    border-bottom: 1px solid #eee;
    padding: 0.4em 0;
    font-size: 80%;
    font-weight: 500;
    letter-spacing: 0.1em;
}

.content {
    padding: 2em 1em 0;
}

.post {
    padding-bottom: 2em;
}
.post-title {
    font-size: 2em;
    color: #222;
    margin-bottom: 0.2em;
}
.post-meta {
    color: #999;
    font-size: 90%;
    margin: 0;
}



/* Template Styles */

#container  {
    width:1100px;
    margin-left:auto;
    margin-right:auto;
    background-color:#;
}
#header {
    width:100%;
    background-color:#;
    margin-top:5px;
}
#page_title {
    width:500px;
    padding-bottom:10px;
}
.oasis_title    {
    display:block;
    font-size:2.8em;
    margin-bottom:-12px;
    font-weight: 600;
    color:#45697c;
}
.oasis_subtitle {
    font-size:1em;
    color:#bbbbbb;
    
}
#header_link    {
    float:right;
    font-size:.9em;
    padding-right:10px;
    padding-top:10px;
}
.widedrop   {
    width:600px;
}
#combined_search    {
    width:1100px;
    min-height:180px;
    padding-top:20px;
    background-color: #2d5872;
    border: 1px solid #000;
}
#combined_search_pool    {
    width:1100px;
    min-height:70px;
    padding-top:10px;
    background-color: #2d5872;
}
#vendor_back_button   {
    float:left;
    margin-left:27px;
    padding-left:34px;
    padding-top:7px;
    background:url(/static/mirage_site/images/back_arrow.png);
    background-repeat: no-repeat;
    background-position: 0px 13px;

}
.back_text  {
    color:#FFF;
    font-size:1.4em;
    font-weight:500;
    text-decoration: underline;
}
.back_text a:hover {
    color:#FFF;
    font-size:2.1em;
    font-weight:600;
    text-decoration: underline;
}
#vehicle_select   {
    float:left;
    margin-left:27px;
    padding-left:37px;
    background:url(/static/mirage_site/images/1.png);
    background-repeat: no-repeat;
    background-position: 0px 5px;

}
.vehicle_select_style  {
    color:#bfbfbf;
    height:26px;
    font-family: 'Open Sans', sans-serif;
}
#search {
    float:left;
    margin-left:40px;
    padding-left:37px;
    background:url(/static/mirage_site/images/2.png);
    background-repeat: no-repeat;
    background-position: 0px 5px;
    width:417px;

}
.select_text    {
    color:#FFF;
}
#filter_container   {
    float:left;
    padding-left:37px;
    margin-left:40px;
    background:url(/static/mirage_site/images/3.png);
    background-repeat: no-repeat;
    background-position: 0px 5px;
}
#container #filter_container {
    float:left;
    color:#fff;
    padding-right:10px;
}
#filter_container input  {
    padding: 0;
    margin:0;
    vertical-align: middle;
    position: relative;
    top: -1px;
    *overflow: hidden;
    margin-right:5px;
}
#filter_container label  {
    display: block;
    padding-left: 15px;
    text-indent: -15px;
}
#filter_c1  {
    float:left;
}
#filter_c2  {
    float:left;
    padding-left:17px;
}
.filterbox   {
    font-size:.9em;
    line-height: 1.3em;
}
#filter label input  {
    padding-right:5px !important; 
}
.labeltest  {
    margin-left:px;
}
#main_container  {
    float:left;
    width:1100px;
    overflow: ;
}
#custom_page_content  {
    width:1100px;
    padding-left:30px;
    padding-right:30px;
    display:block;
}
#about_oasis    {
    float:left;
    width:430px;
    margin-left:60px;
}
#about_oasis h3   {
    font-weight: 600;
}
.about_oasis_text   {
    margin-left:10px;
}
#data_sources   {
    float:left;
    width:440px;
    margin-left:40px;
}
#data_sources_last_updated  {
    width:100%;
    text-align: right;
    border-bottom: 1px solid #eeeeee;
}
.data_source_name   {
    display:block;
    color:#640016;
    font-weight: 600;
    float:left;

}
.data_sources_row   {
    
    margin-top:20px;
}
.data_source_description    {
    color:#6b6b6b;
    display:block;
    
}
#data_source_date_sam   {
    float:right;
    font-weight:600;
    color:#009900;

}
#data_source_date_fpds   {
    float:right;
    font-weight:600;
    color:#009900;
}
#data_source_date_fapiis   {
    float:right;
    font-weight:600;
    color:#009900;
}
/* ... */

